2001-04-28  lav

	* keymap.cc: (ActionCodePrettyPrint) print 8-bit chars and ^@ correctly.
	* history.cc: check device number too.

2001-04-13  lav

	* highli.cc: stop highlighting when it takes too long.
	* edit.h, kern.cc: (ReplaceTextFromFile, ScanForCharForward) new functions.
	* keymap.cc, keymap.h, keymapfn.cc: support for loading/saving keymaps.
	* loadsave.cc: use fchmod/ftruncate; speed up file loading.
	* textpoin.cc: don't set flags for zero TextPoint.

2001-04-11  lav

	* user.cc: stop drag mark on block operations.

2001-04-09  lav

	* keymap.cc: fix several sign-expansion bugs.
	* block.cc: stop drag mark on block operations.

2001-03-20  lav

	* user.cc: (UserLineDown) don't insert many \n in text mode; don't
	  mark text modified if last eol is added.

2001-03-16  lav

	* getch.cc: (linux_process_key) new function.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc: new action
	  remember-block to save block to clipboard; bind delete-block
	  to xterm's shift-del and yank-block to xterm's shift-ins.
	* user.cc, user.h: (UserRememberBlock) new function.

2001-03-16  lav

	* edit.cc, edit.h, kern.cc: (SeekStdCol) new function, use it.
	* user.cc: fix UserLineDown in case when EOL is missing on last line;
	  call SeekStdCol in UserMark* functions.
	* search.cc, highli.cc: include xalloca.h.

2001-02-01  lav

	* about.cc: correct copyright string.

2001-01-31  lav

	* search.cc: fix replacing when replace string ends with \.
	  (reported by Andrey E. Lerman <lae@lae.pp.ru>)

2000-12-26  lav

	* block.cc: set modification flag after piping in.
	* user.cc: paranoia - set flag in UsesPipeBlock.

2000-12-20  lav

	* block.cc: fix block end setting in DoUnindent/DoIndent.

2000-12-18  lav

	* block.cc: (DoUnindent) break loop if no next line found (fixes
	  spinning in case of missing EOL on last line of block).
	* keymap.cc: flush input only if no action matched.
	* keymap.h: add MARK_ALL action.
	* keymapdf.cc, keymapfn.cc: bind MARK_ALL.

2000-09-15  lav
