@@ -191,6 +191,29 @@ enum  Action
    SAVE_KEYMAP,
    SAVE_KEYMAP_FOR_TERM,
 
+   SET_BOOKMARK,
+   SET_BOOKMARK_0,
+   SET_BOOKMARK_1,
+   SET_BOOKMARK_2,
+   SET_BOOKMARK_3,
+   SET_BOOKMARK_4,
+   SET_BOOKMARK_5,
+   SET_BOOKMARK_6,
+   SET_BOOKMARK_7,
+   SET_BOOKMARK_8,
+   SET_BOOKMARK_9,
+   GO_BOOKMARK,
+   GO_BOOKMARK_0,
+   GO_BOOKMARK_1,
+   GO_BOOKMARK_2,
+   GO_BOOKMARK_3,
+   GO_BOOKMARK_4,
+   GO_BOOKMARK_5,
+   GO_BOOKMARK_6,
+   GO_BOOKMARK_7,
+   GO_BOOKMARK_8,
+   GO_BOOKMARK_9,
+
    MOUSE_ACTION,
    NO_ACTION
 };
